# CPlusPlusBinanceUnfazedOrderBook

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  copy_to_clipboard.py  main.cpp  main.py  pyproject.toml  setup.py
bindings/: orderbook_module.cpp
include/: AssetKey.h  CSVHeader.h  CSVParser.h  DataVectorLoader.h  EntryDecoder.h  FinalOrderBookSnapshot.h  GlobalMarketState.h  MarketState.h  MetricMask.h  OrderBook.h  OrderBookEntry.h  OrderBookMetrics.h  OrderBookMetricsArrays.h  OrderBookMetricsCalculator.h  OrderBookMetricsEntry.h  OrderBookSessionSimulator.h  OrderbookMetrics.h  RollingDifferenceDepthStatistics.h  RollingStatisticsData.h  RollingTradeStatistics.h  SingleVariableCounter.h  VariablesCounter.h  engine.h  mmap_win.h
include/detail/: metrics_list.def
include/enums/: AssetParameters.h  BinanceEntry.h  DifferenceDepthEntry.h  DifferenceDepthSnapshotEntry.h  Market.h  OrderBookEntry.h  StreamType.h  Symbol.h  TradeEntry.h
python_tests/: py_ob.py  test_difference_depth_entry.py  test_global_market_state.py  test_market_state.py  test_order_book.py  test_orderbook_session_simulator.py  test_single_variable_counter.py  test_trade_entry.py
python_tests/csv/: test_positive_binance_depth_snapshot_difference_depth_stream_trade_stream_usd_m_futures_trxusdt_24-04-2025.csv  test_positive_binance_depth_snapshot_usd_m_futures_trxusdt_10-04-2025_first_snapshot.csv  test_positive_binance_difference_depth_stream_usd_m_futures_trxusdt_09-04-2025_3_cols_till_next_day_firsts.csv  test_positive_binance_merged_depth_snapshot_difference_depth_stream_trade_stream_usd_m_futures_trxusdt_14-04-2025.csv
src/: AssetParameters.cpp  CSVHeader.cpp  CSVParser.cpp  DataVectorLoader.cpp  EntryDecoder.cpp  FinalOrderBookSnapshot.cpp  GlobalMarketState.cpp  MarketState.cpp  OrderBook.cpp  OrderBookMetrics.cpp  OrderBookMetricsArrays.cpp  OrderBookMetricsCalculator.cpp  OrderBookSessionSimulator.cpp  RollingDifferenceDepthStatistics.cpp  RollingStatisticsData.cpp  RollingTradeStatistics.cpp  SingleVariableCounter.cpp  VariablesCounter.cpp  engine.cpp  main.cpp
test/: TestOrderBook.cpp  TestSingleVariableCounter.cpp
test/sample_csvs/: binance_difference_depth_stream_usd_m_futures_trxusdt_09-04-2025_short.csv
test/sample_csvs/complexOrderBookTestOnSingleDay/: binance_depth_snapshot_usd_m_futures_trxusdt_09-04-2025.csv
